JAVA-376: Fixed deprecation warnings.